feat: professionalize repository structure
- Reorganize project into /src and /assets folders
- Add MIT LICENSE
- Create CONTRIBUTING.md with contribution guidelines
- Setup GitHub Actions for automatic deployment
- Remove sensitive data (DNI) from footer
- Enhance README with badges, roadmap, and professional structure
- Update all file paths to new structure

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <div class="footer-info">
-            Daniel Garcia Ortega 76667976Y
+            Daniel Garcia Ortega
         </div>
     </div>
 
